# Dota2Dumper

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
dumper/: CMakeLists.txt  dllmain.cpp  dump.cpp  dump.hpp  schema.cpp  schema.hpp  seh_helper.cpp  seh_helper.h
injector/: CMakeLists.txt  main.cpp
